--- a/index.html
+++ b/index.html
@@ -16,56 +16,64 @@
     </div>
     <form action="#" method="post">
         <section class="top">
-            <p>The moonlight danced on the rippling waters, casting a mesmerizing glow. In the quietude of the night, whispers of the wind carried tales of forgotten dreams. Underneath the canvas of stars, a symphony of silence unfolded.</p>
-            <p>You know you want to.</p>
+            <div>
+                <p>The moonlight danced on the rippling waters, casting a mesmerizing glow. In the quietude of the night, whispers of the wind carried tales of forgotten dreams. Underneath the canvas of stars, a symphony of silence unfolded.</p>
+                <p>You know you want to.</p>
+            </div>
         </section>
         <section class="main">
             <h1>Let's do this!</h1>
             <p>
                 Required fields are followed by <strong><span aria-label="required">*</span></strong>
             </p>
-            <p>
-                <label for="first_name">
-                    <span>FIRST NAME:</span>
-                    <strong><span aria-label="required">*</span></strong>
-                </label>
-                <input type="text" name="user_first_name" id="first_name" required>
-            </p>
-            <p>
-                <label for="last_name">
-                    <span>LAST NAME:</span>
-                    <strong><span aria-label="required">*</span></strong>
-                </label>
-                <input type="text" name="user_last_name" id="last_name" required>
-            </p>
-            <p>
-                <label for="email">
-                    <span>EMAIL:</span>
-                    <strong><span aria-label="required">*</span></strong>
-                </label>
-                <input type="email" name="user_email" id="email" required>
-            </p>
-            <p>
-                <label for="phone">
-                    <span>PHONE NUMBER:</span>
-                    <strong><span aria-label="required">*</span></strong>
-                </label>
-                <input type="tel" name="user_phone" id="phone" required>
-            </p>
-            <p>
-                <label for="pwd">
-                    <span>PASSWORD:</span>
-                    <strong><span aria-label="required">*</span></strong>
-                </label>
-                <input type="text" name="user_password" id="pwd" required>
-            </p>
-            <p>
-                <label for="confirm_pwd">
-                    <span>CONFIRM PASSWORD:</span>
-                    <strong><span aria-label="required">*</span></strong>
-                </label>
-                <input type="text" name="user_confirm_password" id="confirm_pwd" required>
-            </p>
+            <div class="name">
+                <p>
+                    <label for="first_name">
+                        <span>FIRST NAME:</span>
+                        <strong><span aria-label="required">*</span></strong>
+                    </label>
+                    <input type="text" name="user_first_name" id="first_name" required>
+                </p>
+                <p>
+                    <label for="last_name">
+                        <span>LAST NAME:</span>
+                        <strong><span aria-label="required">*</span></strong>
+                    </label>
+                    <input type="text" name="user_last_name" id="last_name" required>
+                </p>
+            </div>
+            <div class="contact">
+                <p>
+                    <label for="email">
+                        <span>EMAIL:</span>
+                        <strong><span aria-label="required">*</span></strong>
+                    </label>
+                    <input type="email" name="user_email" id="email" required>
+                </p>
+                <p>
+                    <label for="phone">
+                        <span>PHONE NUMBER:</span>
+                        <strong><span aria-label="required">*</span></strong>
+                    </label>
+                    <input type="tel" name="user_phone" id="phone" required>
+                </p>
+            </div>
+            <div class="password">
+                <p>
+                    <label for="pwd">
+                        <span>PASSWORD:</span>
+                        <strong><span aria-label="required">*</span></strong>
+                    </label>
+                    <input type="text" name="user_password" id="pwd" required>
+                </p>
+                <p>
+                    <label for="confirm_pwd">
+                        <span>CONFIRM PASSWORD:</span>
+                        <strong><span aria-label="required">*</span></strong>
+                    </label>
+                    <input type="text" name="user_confirm_password" id="confirm_pwd" required>
+                </p>
+            </div>
         </section>
         <section class="bottom">
             <button type="submit">Create Account</button>
