Finish styling the form

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign-Up Now!</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
         <section class="top">
             <div>
                 <p>The moonlight danced on the rippling waters, casting a mesmerizing glow. In the quietude of the night, whispers of the wind carried tales of forgotten dreams. Underneath the canvas of stars, a symphony of silence unfolded.</p>
-                <p>You know you want to.</p>
+                <p>You <em>know</em> you want to.</p>
             </div>
         </section>
         <section class="main">
@@ -50,6 +50,7 @@
                     </label>
                     <input type="email" name="user_email" id="email" required>
                 </p>
+
                 <p>
                     <label for="phone">
                         <span>PHONE NUMBER:</span>
