--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Blaka+Hollow&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="image">
-
+        <div class="logo">
+            <img src="resources/hiking.svg" alt="logo of man hiking" id="logo-man">
+            <h2>HIKE</h2>
+        </div>
     </div>
     <form action="#" method="post">
         <section class="top">
@@ -77,7 +81,7 @@
             </div>
         </section>
         <section class="bottom">
-            <button type="submit">Create Account</button>
+            <button type="button">Create Account</button>
             <p>Already have an account? <a href="#">Log in</a></p>
         </section>
     </form>
